kubernetes/backenddeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: venuzs/backend:v1
          name: backend
          ports:
            - containerPort: 80
